--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,7 +28,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
-              <a class="btn btn-outline-primary" href="/urls/<%= url %>/edit">Edit</a>
+              <a class="btn btn-outline-primary" href="/urls/<%= url %>">Edit</a>
             </td>
             <td>
               <form method = "POST" action="/urls/<%= url %>/delete">
