registering new users

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -7,8 +7,8 @@
 </head>
 <body>
   <form method="POST" action="/register">
-  <input type="email" name="email">
-  <input type="password" name="password">
+  <input type="email" name="email" placeholder="Your email">
+  <input type="password" name="password" placeholder="Your password">
   <button type="submit">Register</button>
   </form>
 </body>
