--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,17 +9,20 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         
-         <%if (username){%>
-         Logged in as: <%= username %>
-         <form method="POST" action="/logout">
-          <button class="btn btn-outline-primary"type="submit">Logout</button>
-        </form>
-         <%} else { %>
-          <form method="POST" action="/login">
-         Username: <input type="text" name="username" >
-         <button class="btn btn-outline-primary"type="submit">Login</button>
-        </form>
-         <% } %>
+         
+           
+            <%if (myUser){%>
+            Logged in as: <%= myUser.email %>
+            <form method="POST" action="/logout">
+            <button class="btn btn-outline-primary"type="submit">Logout</button>
+            </form>
+            <%} else { %>
+            <form method="POST" action="/login">
+            Email: <input type="text" name="email" >
+            <button class="btn btn-outline-primary"type="submit">Login</button>
+            </form>
+            <% } %>
+         
          
         
       </div>
