refactoring login route

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration page</title>
+  <title>Login Page</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 <body>
-  <%- include('./partials/_header.ejs') %>
-  <h1>Create Account</h1>
-  <form method="POST" action="/register">
-  Email address<br><input type="email" name="email" placeholder="Your email"><br><br>
-  Password<br><input type="password" name="password" placeholder="Your password"><br><br>
-  <button class="btn btn-outline-primary"type="submit">Register</button>
+   <%- include('./partials/_header.ejs') %>
+   <h1>Login</h1>
+  <form method="POST" action="/login">
+    Email address<br><input type="email" name="email" placeholder="Type your email"><br><br>
+    Password<br><input type="password" name="password" placeholder="Type your password"><br><br>
+    <button class="btn btn-outline-primary"type="submit">Login</button>
   </form>
 </body>
 </html>
