commiting all the files

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,7 +28,10 @@
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
             <td>
-              <a class="btn btn-outline-primary" href="/urls/<%= url %>">Edit</a>
+              <form method="GET" action="/urls/<%= url %>">
+                <button class="btn btn-outline-primary"type="submit">Edit</button>
+              </form>
+              <!-- <a class="btn btn-outline-primary" href="/urls/<%= url %>">Edit</a> -->
             </td>
             <td>
               <form method = "POST" action="/urls/<%= url %>/delete">
