--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,7 +14,7 @@
       <div class="card-body">     
           <h5 class="card-title">TinyURL for: <%= longURL %></h5>
           <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>  -->
-        <a href="#">New URL: </a>
+        <!-- <a href="#">New URL: </a> -->
       </div>
     <div class="card-footer text-muted">
       <h1>Edit</h1>
